Add unit test for CollectionBasedItemProvider